	* gm2/tools-src/gensum.py:  tidied up spacing and changed Usage
          to take an exit code.
	* gm2/gm2-lang.c:  call build_common_tree_nodes with a single
          parameter.  Use late_global_decl callback instead of global_decl.
	* gm2-gcc/m2type.c:  use SET_TYPE_ALIGN instead of an assignment.
	* gm2/gm2-gcc/gcc-consolidation.h:  include backend.h,
	  rtl.h, predict.h and df.h.

2017-05-24      Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-compiler/M2GCCDeclare.mod:  use separate procedure to
          declare variables depending whether -fm2-whole-program was
          specified.  (DeclareImportedVariablesWholeProgram)  New
          procedure.  (DeclareVariableWholeProgram)  New procedure.
          (DeclareGlobalVariablesWholeProgram)  New procedure.
          (DeclareImportedVariablesWholeProgram)  New procedure.
          (StartDeclareModuleScopeWholeProgram)  use
	  DeclareImportedVariablesWholeProgram.
	* gm2/gm2-gcc/m2decl.c:  corrected dates.

2017-05-23      Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-compiler/M2Code.mod:  removed unnecessary code.
          No longer need M2SubExp.mod.
	* gm2/gm2-compiler/M2GCCDeclare.mod:  (IsRecordFieldDependants)
          check alignment value.  (WalkRecordFieldDependants)
          walk alignment value.  (WalkVarient) walk alignment value.
	* gm2/gm2-compiler/M2Quads.mod:  change comment as we no longer
          use M2SubExp.mod
	* gm2/gm2-gcc/m2convert.c:  use convert_loc instead of convert.
	* gm2/gm2.texi:  remove groff font change and use texinfo.
	* gm2/init/gm2-gccinit:  remove M2SubExp from the list.
	* updated web pages to reflect release of 1.2.0.

2017-05-11      Gaius Mulley <gaius@gnu.org>

	* gm2/NEWS:  updated to reflect release 1.2.0.
	* gm2/configure:  regenerated.
	* gm2/configure.in:  updated to reflect release 1.2.0.
	* gm2/gm2-libs/config-host.in:  updated to reflect
	  release 1.2.0.
	* gm2/gm2-libs/config-target.in:  updated to reflect
          release 1.2.0.